welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array[Int](num)
	var i =0
  var j=0
  
  while(i<num){
    for (k <- 0 to T(j)){
      T(j+k)=i      
    }
    j+=1
    i+=T(j)
    
    
  }
}